Fixed wrapping problem.

--- a/front/src/components/UserCard/UserCard.css
+++ b/front/src/components/UserCard/UserCard.css
@@ -2,14 +2,11 @@
     --card-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
 }
 .code_block {
-    display: flex;
+    white-space: pre;
     width: 100%;
     height: 100%;
     margin: 0;
-    padding: 0;
-    word-wrap: normal;
-    tab-size: 0.5rem;
-    text-align: start;
+    display: block;
 }
 
 .card_block {
